--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,12 +83,57 @@ jobs:
           name: ssh login  
           command: |
             rsync -va -e 'ssh  -o StrictHostKeyChecking=no'  --delete   build/  hubeei@94.72.98.194:public_html/hub
-     
+  deploy-backend-staging:
+    docker:
+        - image: cimg/php:8.3
+    working_directory: ~/repo
+    steps:
+      - add_ssh_keys:
+          fingerprints: 
+          - "94:f3:79:6d:db:f2:27:8e:98:e2:7f:30:bb:da:5c:03"
+      - checkout
+      # install dependencies
+      - setup_remote_docker:
+          version: 20.10.12
+          docker_layer_caching: true
+      - run:
+          name: rename .env.example file to .env 
+          command: |
+            mv Backend/.env.example Backend/.env
+
+      - run:
+          name: Install dependencies
+          command:  cd Backend && CI=false composer clear-cache && CI=false  composer install &&  CI=false php artisan key:generate
+
+      - run: sudo apt update
+      - run: sudo apt-get install rsync
+
+      # - run:
+      #     name: Update known hosts
+      #     command:  CI=false ssh-keyscan -H 185.160.67.60 >> ~/.ssh/known_hosts && cat ~/.ssh/known_hosts
+      - run:
+          name: find and replace in document
+          command: |
+            sed -i -e 's:/public/index.php:/index.php:g' Backend/public/index.php && sed -i -e 's:/../vendor/autoload.php:/vendor/autoload.php:g' Backend/public/index.php && sed -i -e 's:DB_DATABASE=forge:DB_DATABASE=skillz_hubeei:g' Backend/.env && sed -i -e 's:DB_USERNAME=forge:DB_USERNAME=skillz_tibilon:g' Backend/.env  && sed -i -e 's:/../bootstrap/app.php:/bootstrap/app.php:g' Backend/public/index.php && sed -i -e 's:DB_PASSWORD=forge:DB_PASSWORD="Ubuxa##99":g' Backend/.env
+
+      
+      - run:
+          name: ssh login  
+          command: |
+             rsync --delete -va -e 'ssh -p 7822 -o StrictHostKeyChecking=no'   Backend/app Backend/database Backend/phpunit.xml Backend/storage Backend/vendor Backend/artisan Backend/.env Backend/tests Backend/bootstrap Backend/composer.json Backend/resources Backend/composer.lock Backend/routes Backend/config Backend/package.json Backend/public/ Backend/public skillz@185.160.67.60:revenuehub/api
+      - run:
+          name: ssh and effect migration  
+          command: |
+             ssh -p 7822 -t skillz@185.160.67.60 "cd revenuehub/api && php artisan migrate"
 workflows:
   version: 2
   revenue_hub_deploy:
     jobs:
       - deploy-frontend-staging: # Use the pre-configured job, deploy-via-git
+          filters:
+            branches:
+              only: staging
+      - deploy-backend-staging: # Use the pre-configured job, deploy-via-git
           filters:
             branches:
               only: staging
