--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,7 +90,7 @@ jobs:
     steps:
       - add_ssh_keys:
           fingerprints: 
-          - "94:f3:79:6d:db:f2:27:8e:98:e2:7f:30:bb:da:5c:03"
+          - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
       - setup_remote_docker:
@@ -114,7 +114,7 @@ jobs:
       - run:
           name: find and replace in document
           command: |
-            sed -i -e 's:/public/index.php:/index.php:g' Backend/public/index.php && sed -i -e 's:/../vendor/autoload.php:/vendor/autoload.php:g' Backend/public/index.php && sed -i -e 's:DB_DATABASE=forge:DB_DATABASE=skillz_hubeei:g' Backend/.env && sed -i -e 's:DB_USERNAME=forge:DB_USERNAME=skillz_tibilon:g' Backend/.env  && sed -i -e 's:/../bootstrap/app.php:/bootstrap/app.php:g' Backend/public/index.php && sed -i -e 's:DB_PASSWORD=forge:DB_PASSWORD="Ubuxa##99":g' Backend/.env
+            sed -i -e 's:/public/index.php:/index.php:g' Backend/public/index.php && sed -i -e 's:/../vendor/autoload.php:/vendor/autoload.php:g' Backend/public/index.php && sed -i -e 's:DB_DATABASE=forge:DB_DATABASE=skillz_revenuehub:g' Backend/.env && sed -i -e 's:DB_USERNAME=forge:DB_USERNAME=skillz_revenuehub:g' Backend/.env  && sed -i -e 's:/../bootstrap/app.php:/bootstrap/app.php:g' Backend/public/index.php && sed -i -e 's:DB_PASSWORD=forge:DB_PASSWORD="Ubuxa##99":g' Backend/.env
 
       
       - run:
