--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "darkaonline/l5-swagger": "^8.6",
+        "flutterwavedev/flutterwave-v3": "^1.0",
         "guzzlehttp/guzzle": "^7.2",
         "illuminate/notifications": "*",
         "laravel/framework": "^10.0",
