--- a/Backend/.env.testing
+++ b/Backend/.env.testing
@@ -14,10 +14,10 @@ DB_DATABASE=forge
 DB_USERNAME=forge
 DB_PASSWORD="Ubuxa##99"
 
-BVN=22228902166
-PUBLIC_KEY=FLWPUBK-f7a664fb7c33dd51a97a31d3edc259ac-X
-SECRET_KEY=FLWSECK-e7c9fdbd39b558132678f973d9ee5a15-18f874d81d5vt-X
-ENCRYPTION_KEY=e7c9fdbd39b5a5de13cbce78
+BVN=
+PUBLIC_KEY=
+SECRET_KEY=
+ENCRYPTION_KEY=
 ENV='staging/production'
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
