--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,7 @@
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.13",
     "react-router-dom": "^6.23.0",
+    "recharts": "^2.12.7",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
