--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Frontend/yarn-error.log*
 Frontend/pnpm-debug.log*
 Frontend/lerna-debug.log*
 
+Frontend/node_modules/
 Frontend/node_modules
 Frontend/dist
 Frontend/dist-ssr
