--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -12,7 +12,8 @@
         "illuminate/notifications": "*",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "mailersend/laravel-driver": "^2.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -63,7 +64,8 @@
         "preferred-install": "dist",
         "sort-packages": true,
         "allow-plugins": {
-            "pestphp/pest-plugin": true
+            "pestphp/pest-plugin": true,
+            "php-http/discovery": true
         }
     },
     "minimum-stability": "stable",
