--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME="REVENUE HUB"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
+MAIL_HOST=smtp.sendgrid.net
+MAIL_PORT=587
+MAIL_USERNAME=apikey
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS="info@revenuehub.ng"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
