--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -2,7 +2,7 @@ APP_NAME="REVENUE HUB"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://revenuehub.skillzserver.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
