--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,6 +11,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/material": "^5.15.19",
     "@types/node": "^20.12.12",
     "axios": "^1.7.2",
     "html2canvas": "^1.4.1",
