--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -57,9 +57,9 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-BVN=
-PUBLIC_KEY=
-SECRET_KEY=
-ENCRYPTION_KEY=
+BVN=forge
+PUBLIC_KEY=forge
+SECRET_KEY=forge
+ENCRYPTION_KEY=forge
 ENV='staging/production'
-MAILERSEND_API_KEY=
+MAILERSEND_API_KEY=forge
