--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,16 +114,6 @@ jobs:
       - run:
           name: find and replace in document
           command: |
-            sed -i -e 's:/public/index.php:/index.php:g' Backend/public/index.php && sed -i -e 's:/../vendor/autoload.php:/vendor/autoload.php:g' Backend/public/index.php && sed -i -e 's:DB_DATABASE=forge:DB_DATABASE=skillz_revenuehub:g' Backend/.env && sed -i -e 's:DB_USERNAME=forge:DB_USERNAME=skillz_revenuehub:g' Backend/.env  && sed -i -e 's:/../bootstrap/app.php:/bootstrap/app.php:g' Backend/public/index.php && sed -i -e 's:DB_PASSWORD=forge:DB_PASSWORD="Ubuxa##99":g' Backend/.env && sed -i -e "s:BVN=:BVN=${BVN}:g" Backend/.env && sed -i -e "s:PUBLIC_KEY=:PUBLIC_KEY=${PUBLIC_KEY}:g" Backend/.env && sed -i -e "s:SECRET_KEY=:SECRET_KEY=${SECRET_KEY}:g" Backend/.env &&  sed -i -e "s:ENCRYPTION_KEY=:ENCRYPTION_KEY=${ENCRYPTION_KEY}:g" Backend/.env &&  sed -i -e "s:MAILERSEND_API_KEY=:MAILERSEND_API_KEY=${MAILERSEND_API_KEY}:g" Backend/.env 
-
-      
-      - run:
-          name: ssh login  
-          command: |
-             rsync --delete -va -e 'ssh -p 7822 -o StrictHostKeyChecking=no'   Backend/app Backend/database Backend/phpunit.xml Backend/storage Backend/vendor Backend/artisan Backend/.env Backend/tests Backend/bootstrap Backend/composer.json Backend/resources Backend/composer.lock Backend/routes Backend/config Backend/package.json Backend/public/ Backend/public skillz@185.160.67.60:revenuehub/api
-      - run:
-          name: ssh and effect migration  
-          command: |
             sed -i -e 's:/public/index.php:/index.php:g' Backend/public/index.php
             sed -i -e 's:/../vendor/autoload.php:/vendor/autoload.php:g' Backend/public/index.php
             sed -i -e 's:DB_DATABASE=forge:DB_DATABASE=skillz_revenuehub:g' Backend/.env
@@ -133,9 +123,18 @@ jobs:
             sed -i -e 's:BVN=forge:BVN=${BVN}:g' Backend/.env
             sed -i -e 's:PUBLIC_KEY=forge:PUBLIC_KEY=$PUBLIC_KEY:g' Backend/.env
             sed -i -e "s:SECRET_KEY=forge:SECRET_KEY=$SECRET_KEY:g" Backend/.env
-            sed -i -e "s:ENCRYPTION_KEY=forge:ENCRYPTION_KEY=${ENCRYPTION_KEY}:g" Backend/.env
+            sed -i -e 's:ENCRYPTION_KEY=forge:ENCRYPTION_KEY=${ENCRYPTION_KEY}:g' Backend/.env
             sed -i -e "s:MAILERSEND_API_KEY=forge:MAILERSEND_API_KEY=${MAILERSEND_API_KEY}:g" Backend/.env
 
+      
+      - run:
+          name: ssh login  
+          command: |
+             rsync --delete -va -e 'ssh -p 7822 -o StrictHostKeyChecking=no'   Backend/app Backend/database Backend/phpunit.xml Backend/storage Backend/vendor Backend/artisan Backend/.env Backend/tests Backend/bootstrap Backend/composer.json Backend/resources Backend/composer.lock Backend/routes Backend/config Backend/package.json Backend/public/ Backend/public skillz@185.160.67.60:revenuehub/api
+      - run:
+          name: ssh and effect migration  
+          command: |
+             ssh -p 7822 -t skillz@185.160.67.60 "cd revenuehub/api && php artisan migrate && php artisan l5-swagger:generate"
 workflows:
   version: 2
   revenue_hub_deploy:
