--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -120,11 +120,11 @@ jobs:
             sed -i -e 's:DB_USERNAME=forge:DB_USERNAME=skillz_revenuehub:g' Backend/.env
             sed -i -e 's:/../bootstrap/app.php:/bootstrap/app.php:g' Backend/public/index.php
             sed -i -e 's:DB_PASSWORD=forge:DB_PASSWORD="Ubuxa##99":g' Backend/.env
-            sed -i -e "s:BVN=forge:BVN={$BVN}:g" Backend/.env
-            sed -i -e "s:PUBLIC_KEY=forge:PUBLIC_KEY=${PUBLIC_KEY}:g" Backend/.env
-            sed -i -e "s:SECRET_KEY=forge:SECRET_KEY=${SECRET_KEY}:g" Backend/.env
+            sed -i -e "s:BVN=forge:BVN='${BVN}':g" Backend/.env
+            sed -i -e 's:PUBLIC_KEY=forge:PUBLIC_KEY="${PUBLIC_KEY}":g' Backend/.env
+            sed -i -e "s:SECRET_KEY=forge:SECRET_KEY='${SECRET_KEY}':g" Backend/.env
             sed -i -e "s:ENCRYPTION_KEY=forge:ENCRYPTION_KEY=${ENCRYPTION_KEY}:g" Backend/.env
-            sed -i -e "s:MAILERSEND_API_KEY=forge:MAILERSEND_API_KEY={$MAILERSEND_API_KEY}:g" Backend/.env
+            sed -i -e "s:MAILERSEND_API_KEY=forge:MAILERSEND_API_KEY=${MAILERSEND_API_KEY}:g" Backend/.env
 
       
       - run:
