--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,14 @@ jobs:
 
       - run: sudo apt update
       - run: sudo apt-get install rsync
+      - run:
+          name: test environment variable for MAILERSEND_API_KEY 
+          command: |
+            echo ${MAILERSEND_API_KEY}
+      - run:
+          name: test environment variable for MAILERSEND_API_KEY second
+          command: |
+            echo $MAILERSEND_API_KEY
 
       # - run:
       #     name: Update known hosts
@@ -120,9 +128,9 @@ jobs:
             sed -i -e 's:DB_USERNAME=forge:DB_USERNAME=skillz_revenuehub:g' Backend/.env
             sed -i -e 's:/../bootstrap/app.php:/bootstrap/app.php:g' Backend/public/index.php
             sed -i -e 's:DB_PASSWORD=forge:DB_PASSWORD="Ubuxa##99":g' Backend/.env
-            sed -i -e "s:BVN=forge:BVN='${BVN}':g" Backend/.env
-            sed -i -e 's:PUBLIC_KEY=forge:PUBLIC_KEY="${PUBLIC_KEY}":g' Backend/.env
-            sed -i -e "s:SECRET_KEY=forge:SECRET_KEY='${SECRET_KEY}':g" Backend/.env
+            sed -i -e "s:BVN=forge:BVN=${BVN}:g" Backend/.env
+            sed -i -e "s:PUBLIC_KEY=forge:PUBLIC_KEY=${PUBLIC_KEY}:g" Backend/.env
+            sed -i -e "s:SECRET_KEY=forge:SECRET_KEY=${SECRET_KEY}:g" Backend/.env
             sed -i -e "s:ENCRYPTION_KEY=forge:ENCRYPTION_KEY=${ENCRYPTION_KEY}:g" Backend/.env
             sed -i -e "s:MAILERSEND_API_KEY=forge:MAILERSEND_API_KEY=${MAILERSEND_API_KEY}:g" Backend/.env
 
