--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,8 +194,41 @@ jobs:
       - run:
           name: ssh and effect migration  
           command: |
-             ssh -p 7822 -t skillz@185.160.67.60 "cd api && php artisan migrate && php artisan l5-swagger:generate"
+             ssh -p 7822 -t revenuehub@185.160.67.6 "cd api && php artisan migrate && php artisan l5-swagger:generate"
+  deploy-frontend-production:
+    
+    docker:
+        - image: circleci/node:16
+    working_directory: ~/repo
+    steps:
+      - add_ssh_keys:
+         fingerprints: 
+          - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
+      - checkout
+      # install dependencies
+      - setup_remote_docker:
+          version: 20.10.12 
+          docker_layer_caching: true
+      - run:
+          name: Run npm 
+          command: |
+            cd Frontend && npm install 
 
+      - run: CI=false sudo apt update
+      - run: CI=false sudo apt-get install rsync
+
+      - run:
+          name: Update known hosts
+          command: ssh-keyscan -H 185.160.67.6 >> ~/.ssh/known_hosts && cat ~/.ssh/known_hosts
+      - run:
+          name: build file
+          command: |
+             cd Frontend && CI=false npm run build
+     
+      - run:
+          name: ssh login  
+          command: |
+            rsync -va -e 'ssh -p 7822 -o StrictHostKeyChecking=no'  --delete   Frontend/dist/ Frontend/.htaccess  revenuehub@185.160.67.6:www
 
 workflows:
   version: 2
@@ -211,6 +244,10 @@ workflows:
               only: staging
 
       - deploy-backend-production: # Use the pre-configured job, deploy-via-git
+          filters:
+            branches:
+              only: main
+      - deploy-frontend-production: # Use the pre-configured job, deploy-via-git
           filters:
             branches:
               only: main
