--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
-        "mailersend/laravel-driver": "^2.6"
+        "mailersend/laravel-driver": "^2.6",
+        "spatie/simple-excel": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
