--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -34,7 +34,7 @@ MAIL_PORT=587
 MAIL_USERNAME=apikey
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS="info@trial-3zxk54vynm64jy6v.mlsender.net"
+MAIL_FROM_ADDRESS="info@revenuehub.ng"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
