--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -6,6 +6,9 @@ RUN apt-get update && \
     docker-php-ext-configure gd --with-jpeg && \
     docker-php-ext-install pdo_mysql gd
 
+# Install Xdebug
+RUN pecl install xdebug && docker-php-ext-enable xdebug
+
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
@@ -17,6 +20,10 @@ COPY . /app
 RUN composer update
 RUN composer install --optimize-autoloader --no-dev
 
+# Xdebug configuration
+RUN echo "zend_extension=$(find /usr/local/lib/php/extensions/ -name xdebug.so)" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+RUN echo "xdebug.mode=coverage" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
 # Expose the port and start the PHP server
-CMD php artisan serve --host=0.0.0.0 --port $PORT
+CMD php artisan serve --host=0.0.0.0 --port=$PORT
 EXPOSE $PORT
