--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,8 +14,8 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
-    "@types/node": "^20.12.12",
     "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
@@ -34,6 +34,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.5",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^20.14.9",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
