--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@material/snackbar": "^14.0.0",
     "@mui/material": "^5.15.19",
     "@types/node": "^20.12.12",
     "axios": "^1.7.2",
@@ -22,7 +23,7 @@
     "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.0",
+    "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.13",
     "react-router-dom": "^6.23.0",
