--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
+    "is-online": "^10.0.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
     "ngrok": "^5.0.0-beta.2",
