--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.2.0",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.13",
+    "react-responsive": "^10.0.0",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
