--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
     "@material/snackbar": "^14.0.0",
     "@mui/material": "^5.15.19",
     "@types/node": "^20.12.12",
@@ -26,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.13",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
