--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,10 @@
     "is-online": "^10.0.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
+    "mobx-state-tree": "^6.0.1",
     "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
