--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -64,6 +64,6 @@ ENCRYPTION_KEY=forge
 ENV='staging/production'
 MAILERSEND_API_KEY=forge
 BILLER_NAME=forge
-SECRET_KEY=forge
-AES_IV=forge
+SECRET_KEY=jJstiT3KLMD5iRmKsKPOPYpNSDpRzaBI
+AES_IV=8ea793f9ddf917de
 NIBSS_EMAIL="info@skillzsystems.com.ng"
