--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - checkout
       # install dependencies
       - setup_remote_docker:
-          version: 20.10.12
+          version: docker24
           docker_layer_caching: true
       - run:
           name: Run npm
