--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,9 @@ jobs:
             - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: docker24
+          docker_layer_caching: true
       - run:
           name: Run npm
           command: |
@@ -53,8 +55,9 @@ jobs:
             - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
-      - setup_remote_docker
-          
+      - setup_remote_docker:
+          version: docker24
+          docker_layer_caching: true
       - run:
           name: Run npm
           command: |
@@ -94,7 +97,9 @@ jobs:
             - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: docker24
+          docker_layer_caching: true
       - run:
           name: rename .env.example file to .env
           command: |
@@ -117,7 +122,9 @@ jobs:
             - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: docker24
+          docker_layer_caching: true
       - run:
           name: rename .env.example file to .env
           command: |
@@ -175,7 +182,9 @@ jobs:
             - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: docker24
+          docker_layer_caching: true
       - run:
           name: rename .env.example file to .env
           command: |
@@ -223,7 +232,9 @@ jobs:
             - "SHA256:XM+2xRjrCCSH/Frn3FMhEbTaB4RS9hNa9Wm54+iINww"
       - checkout
       # install dependencies
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: docker24
+          docker_layer_caching: true
       - run:
           name: Run npm
           command: |
