--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -63,3 +63,7 @@ SECRET_KEY=forge
 ENCRYPTION_KEY=forge
 ENV='staging/production'
 MAILERSEND_API_KEY=forge
+BILLER_NAME=forge
+SECRET_KEY=jJstiT3KLMD5iRmKsKPOPYpNSDpRzaBI
+AES_IV=8ea793f9ddf917de
+NIBSS_EMAIL="info@skillzsystems.com.ng"
