--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.1.2",
+    "@material/snackbar": "^14.0.0",
     "@mui/material": "^5.15.19",
     "axios": "^1.7.2",
     "dotenv": "^16.4.5",
@@ -20,13 +22,18 @@
     "is-online": "^10.0.0",
     "js-cookie": "^3.0.5",
     "jspdf": "^2.5.1",
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
+    "mobx-state-tree": "^6.0.1",
     "ngrok": "^5.0.0-beta.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.0",
+    "react-icons": "^5.2.1",
     "react-paginate": "^8.2.0",
     "react-qr-code": "^2.0.13",
     "react-responsive": "^10.0.0",
+    "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
