--- a/Backend/composer.json
+++ b/Backend/composer.json
@@ -14,7 +14,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "mailersend/laravel-driver": "^2.6",
-        "spatie/simple-excel": "^3.6"
+        "spatie/simple-excel": "^3.6",
+        "symfony/http-client": "^7.1",
+        "symfony/mailgun-mailer": "^7.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
