fixed issues with nibss

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -63,5 +63,5 @@ SECRET_KEY=forge
 ENCRYPTION_KEY=forge
 ENV='staging/production'
 MAILERSEND_API_KEY=forge
-BILLER_NAME=forge
+BILLER_NAME="Alewa Akawu Facilities Management Limited"
 NIBSS_EMAIL=forge
