--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -36,6 +36,7 @@
     "react-responsive": "^10.0.0",
     "react-responsive-modal": "^6.4.2",
     "react-router-dom": "^6.23.0",
+    "react-tabs": "^6.1.0",
     "recharts": "^2.12.7",
     "swr": "^2.2.5",
     "typescript": "^5.4.5"
